[project]
name = "comfyui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "comfyui-frontend-package==1.14.6",
    "torch==2.5.1+cu124",
    "torchsde",
    "torchvision==0.20.1+cu124",
    "torchaudio",
    "numpy>=1.25.0",
    "einops",
    "transformers>=4.28.1",
    "tokenizers>=0.13.3",
    "sentencepiece",
    "safetensors>=0.4.2",
    "aiohttp>=3.11.8",
    "yarl>=1.18.0",
    "pyyaml",
    "pillow",
    "scipy",
    "tqdm",
    "psutil",
    "kornia>=0.7.1",
    "spandrel>=0.4.1",
    "soundfile>=0.13.1",
    "av>=14.4.0",
    "gitpython>=3.1.44",
    "pygithub>=2.6.1",
    "matrix-client==0.4.0",
    "huggingface-hub>0.20",
    "typer>=0.16.0",
    "rich>=14.0.0",
    "typing-extensions>=4.13.2",
    "toml>=0.10.2",
    "uv>=0.7.13",
    "chardet>=5.2.0",
    "onnxruntime>=1.22.0",
]

[tool.uv]
environments = ["platform_machine == 'x86_64' and sys_platform == 'linux'"]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
pytorch-triton = { index = "pytorch-cu124" }
torch = { index = "pytorch-cu124"}
torchvision = { index = "pytorch-cu124" }
triton = { index = "pytorch-cu124" }
